Bug 107372 - Chart wizard crashes after clicking cancel
Summary: Chart wizard crashes after clicking cancel
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Chart (show other bugs)
Version:
(earliest affected)
5.4.0.0.alpha0+
Hardware: All All
: medium critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.4.0
Keywords: haveBacktrace, regression
Depends on:
Blocks: Chart-Wizard
  Show dependency treegraph
 
Reported: 2017-04-23 15:18 UTC by Yousuf Philips (jay) (retired)
Modified: 2017-07-10 15:39 UTC (History)
4 users (show)

See Also:
Crash report or crash signature: ["chart::GL3DBarChart::GL3DBarChart(com::sun::star::uno::Reference<com::sun::star::chart2::XChartType>%20const%20&,OpenGLWindow%20*)"]


Attachments
console logs + bt (19.80 KB, text/plain)
2017-04-23 21:14 UTC, Julien Nabet
Details
console logs + bt (kde4 rendering) (3.77 KB, text/plain)
2017-04-24 20:45 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2017-04-23 15:18:17 UTC
Steps:
1) Open Calc
2) Type 1, 2, 3 into 3 cells
3) Insert chart
4) Select GL3D Bar chart type (if it isnt listed, enable experimental features in the options dialog)
5) Click cancel
6) Crash

Version: 5.4.0.0.alpha0+
Build ID: 44b14e8c7c485d8a3bb99d9484ac63273988b633
CPU threads: 4; OS: Linux 4.4; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-04-17_03:32:22
Locale: en-US (en_US.UTF-8); Calc: group
Comment 1 m_a_riosv 2017-04-23 15:33:25 UTC
Reproducible,

Version: 5.4.0.0.alpha0+
Build ID: 100e00fd3273536ebff130cfddc5da2b1fe609b1
CPU threads: 4; OS: Windows 6.19; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-04-20_05:12:24
Locale: es-ES (es_ES); Calc: CL
Comment 2 Julien Nabet 2017-04-23 21:14:37 UTC
Created attachment 132772 [details]
console logs + bt

On pc Debian x86-64 with master sources updated yesterday, I could reproduce this. (+enable-dbgutil + gtk3 rendering)
I attached bt with some logs console.
Comment 3 Xisco Faulí 2017-04-24 16:34:42 UTC
I've tried to bisect this with bibisect-linux-64-5.4 but the crash in no 100% reproducible with previous commits. I could reproduce the crash back to 482d7ce61b423600b41b459eb26a2cc221cd0acf ( reproduced 2 times out of 10 ) but I'm not sure whether this commit introduced the crash or not. Adding Caolán to see if he can give some insights here.
Comment 4 Julien Nabet 2017-04-24 20:45:18 UTC
Created attachment 132804 [details]
console logs + bt (kde4 rendering)

with master sources updated yesterday + kde4 rendering
Comment 5 Caolán McNamara 2017-04-25 14:16:43 UTC
This makes it work for me at least https://gerrit.libreoffice.org/#/c/36948/
Comment 6 Commit Notification 2017-04-26 07:56:18 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7df948695e5be0077fd9d7d8bc8e25072c345890

Resolves: tdf#107372 set opengl context when using opengl functions

It will be available in 5.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.