Resolves: tdf#107372 set opengl context when using opengl functions

even if they are teardown ones

Change-Id: Ie222d3ffb2b555c0013d7346552d3fc76ec87d9b